--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,6 +31,7 @@ jobs:
         echo "DEBUG = True" >> CapX/settings_local.py
         echo "ALLOWED_HOSTS = ['localhost', '127.0.0.1']" >> CapX/settings_local.py
         echo "BASE_DIR = '${GITHUB_WORKSPACE}'" >> CapX/settings_local.py
+        echo "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3', 'NAME': 'db.sqlite3'}}" >> CapX/settings_local.py
     - name: Coverage report
       run: |
         pip install coverage
