--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -32,7 +32,7 @@ jobs:
         echo "ALLOWED_HOSTS = ['localhost', '127.0.0.1']" >> CapX/settings_local.py
         echo "BASE_DIR = '${GITHUB_WORKSPACE}'" >> CapX/settings_local.py
         echo "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3', 'NAME': 'db.sqlite3'}}" >> CapX/settings_local.py
-        echo "ELASTICSEARCH_DSL = {'default': {'hosts': 'https://localhost:9200'}
+        echo "ELASTICSEARCH_DSL = {'default': {'hosts': 'https://localhost:9200'}"
     - name: Coverage report
       run: |
         pip install coverage
