--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,7 +14,12 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.9]
-
+    services:
+      elasticsearch:
+        image: elasticsearch:6.8.3
+        ports:
+        - 9200/tcp
+        options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -25,6 +30,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Verify Elasticsearch connection from host
+      env:
+        ELASTIC_SEARCH_URL: http://localhost:${{ job.services.elasticsearch.ports[9200] }}
+      run: |
+        echo $ELASTIC_SEARCH_URL
+        curl -fsSL "$ELASTIC_SEARCH_URL/_cat/health?h=status"
     - name: Create settings_local.py
       run: |
         echo "SECRET_KEY = 'SECRET_KEY'" > CapX/settings_local.py
