--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,6 +44,7 @@ jobs:
         echo "BASE_DIR = '${GITHUB_WORKSPACE}'" >> CapX/settings_local.py
         echo "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3', 'NAME': 'db.sqlite3'}}" >> CapX/settings_local.py
         echo "ELASTICSEARCH_DSL = {'default': {'hosts': '${ELASTIC_SEARCH_URL}'}}" >> CapX/settings_local.py
+        cat CapX/settings_local.py >> $GITHUB_OUTPUT
     - name: Coverage report
       run: |
         pip install coverage
