--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ whitenoise
 mysqlclient
 pymysql
 requests
+python-dotenv
 django-modeltranslation
 elasticsearch-dsl>=7.0.0,<8.0.0
 django-elasticsearch-dsl
