--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ social-auth-app-django
 whitenoise
 pymysql
 requests
+opensearch-py
 python-dotenv
 django-modeltranslation
-elasticsearch-dsl>=7.0.0,<8.0.0
-django-elasticsearch-dsl
+django-opensearch-dsl
