Reworking settings and resolving compatibility issues with Toolforge (#12)
*Changing from Elasticsearch to Opensearch
*Migrating tokens to environment variables
*Adding license

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 django
 social-auth-app-django
 whitenoise
-mysqlclient
 pymysql
 requests
+opensearch-py
+python-dotenv
 django-modeltranslation
-elasticsearch-dsl>=7.0.0,<8.0.0
-django-elasticsearch-dsl
+django-opensearch-dsl
