Fixing Github Actions and fixture conflicts

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,6 +44,7 @@ jobs:
         echo "BASE_DIR = '${GITHUB_WORKSPACE}'" >> CapX/settings_local.py
         echo "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3', 'NAME': 'db.sqlite3'}}" >> CapX/settings_local.py
         echo "OPENSEARCH_DSL = {'default': {'hosts': 'http://localhost:${{ job.services.elasticsearch.ports[9200] }}'}}" >> CapX/settings_local.py
+        echo "LANGUAGES = (('en', 'English'),('pt', 'Portuguese'),('es', 'Spanish'),)" >> CapX/settings.py
     - name: Coverage report
       run: |
         pip install coverage
