Add Django REST Framework (#13)
* Skills app: init

* Skills app: Class Based API Views

* Users app: REST auth

* Users app: REST auth finalization

* Skills app: Migrating classes to ViewSet

* Settings: new endpoint

* Settings: debug flag

* Users app: Profile's API implementation

* Users app: Disallow creations and deletions of users from API

* Config: add mimetypes

* Users app: splitting viewsets

* Bug app: API implementation

* Map app: removing

* Templates: removing deprecated templates

* Removing deprecated tests

* Bugs app: add tests

* Users app: add tests

* Skills app: add tests

* Settings: add tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ python-dotenv
 django-modeltranslation
 django-opensearch-dsl
 Pillow
+djangorestframework
+markdown
+django-filter
+django-rest-knox
+rest-social-auth
