--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=WikiMovimentoBrasil_capx
 sonar.organization=wikimovimentobrasil
 
+sonar.python.coverage.reportPaths=coverage.xml
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=capx
 #sonar.projectVersion=1.0
