--- a/.github/workflows/toolforge.yml
+++ b/.github/workflows/toolforge.yml
@@ -21,20 +21,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          fingerprint: ${{ secrets.FINGERPRINT }}
           script_stop: true
           script: |
-            become capx
-            become capx-backend
-            git -C $HOME/www/python/src pull origin stable
-            toolforge webservice --backend=kubernetes python3.11 shell
-            source $HOME/www/python/venv/bin/activate
-            pip install --upgrade pip wheel
-            pip install -r $HOME/www/python/src/requirements.txt
-            python $HOME/www/python/src/manage.py migrate
-            python $HOME/www/python/src/manage.py collectstatic --noinput
-            exit
-            toolforge webservice --backend=kubernetes python3.11 restart
-            exit
-            exit
-            exit
+            become capx-backend bash -c 'git -C $HOME/www/python/src pull origin stable'
+          
+          #TODO: Run migrations and co.
