Add migrations and collectstatic commands to deployment workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.idea
+.idea/
 .env
 __pycache__/
 */__pycache__
@@ -7,7 +7,6 @@ venv/
 Lib/
 Scripts/
 *.sqlite3
-CapX/settings_local.py
 *.pkl
 *.coverage
 htmlcov/
@@ -15,3 +14,4 @@ media/
 .vscode/
 pytest.ini
 coverage.xml
+static/
