--- a/.github/workflows/toolforge.yml
+++ b/.github/workflows/toolforge.yml
@@ -14,17 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install SSH key
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        port: ${{ secrets.PORT }}
-        request_pty: true
-        script_stop: true
-        script: |
-          become capx-backend bash -c 'git -C $HOME/www/python/src pull origin stable'
-          become capx-backend bash -c 'webservice python3.11 shell -- webservice-python-bootstrap'
-          become capx-backend bash -c 'webservice python3.11 shell -- $HOME/www/python/venv/bin/python $HOME/www/python/src/manage.py migrate'
-          become capx-backend bash -c 'webservice python3.11 shell -- $HOME/www/python/venv/bin/python $HOME/www/python/src/manage.py collectstatic --noinput'
+      - name: Run deployment script
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          request_pty: true
+          script_stop: true
+          script: |
+            become capx-backend git -C '$HOME/www/python/src' pull origin stable
+            become capx-backend webservice python3.11 shell -- webservice-python-bootstrap
+            become capx-backend webservice python3.11 shell -- '$HOME/www/python/venv/bin/python' '$HOME/www/python/src/manage.py' migrate
+            become capx-backend webservice python3.11 shell -- '$HOME/www/python/venv/bin/python' '$HOME/www/python/src/manage.py' collectstatic --noinput
