--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,9 +2,9 @@ name: Django CI
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "stable", "dev" ]
   pull_request:
-    branches: [ "dev" ]
+    branches: [ "stable", "dev" ]
 
 jobs:
   build:
