--- a/.github/workflows/toolforge.yml
+++ b/.github/workflows/toolforge.yml
@@ -24,6 +24,8 @@ jobs:
           request_pty: true
           script_stop: true
           script: |
+            become capx-backend git -C '$HOME/www/python/src' fetch origin
+            become capx-backend git -C '$HOME/www/python/src' reset --hard origin/stable
             become capx-backend git -C '$HOME/www/python/src' pull origin stable
             become capx-backend webservice python3.11 shell -- webservice-python-bootstrap
             become capx-backend webservice python3.11 shell -- '$HOME/www/python/venv/bin/python' '$HOME/www/python/src/manage.py' migrate
