--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,10 +33,10 @@ jobs:
         echo "BASE_DIR = '${GITHUB_WORKSPACE}'" >> CapX/settings_local.py
         echo "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3', 'NAME': 'db.sqlite3'}}" >> CapX/settings_local.py
         echo "LANGUAGES = (('en', 'English'),('pt', 'Portuguese'),('es', 'Spanish'),)" >> CapX/settings.py
-        echo "SOCIAL_AUTH_MEDIAWIKI_CALLBACK" = "http://localhost:8000/oauth/complete/mediawiki/" >> CapX/settings_local.py
-        echo "SOCIAL_AUTH_MEDIAWIKI_KEY" = "key" >> CapX/settings_local.py
-        echo "SOCIAL_AUTH_MEDIAWIKI_URL" = "https://localhost:8000/w/api.php" >> CapX/settings_local.py
-        echo "SOCIAL_AUTH_MEDIAWIKI_SECRET" = "text" >> CapX/settings_local.py
+        echo "SOCIAL_AUTH_MEDIAWIKI_CALLBACK = 'https://localhost:8000/oauth/complete/mediawiki/'" >> CapX/settings_local.py
+        echo "SOCIAL_AUTH_MEDIAWIKI_KEY = 'key'" >> CapX/settings_local.py
+        echo "SOCIAL_AUTH_MEDIAWIKI_URL = 'https://localhost:8000/w/api.php'" >> CapX/settings_local.py
+        echo "SOCIAL_AUTH_MEDIAWIKI_SECRET = 'text'" >> CapX/settings_local.py
         echo "    CapX/tests/test_settings_local.py" >> .coveragerc
     - name: Coverage report
       run: |
